# cloudfuse

./: CMakeLists.txt  cloudfuse.c
binaries/linux/64bit/ubuntu/oneric/: cloudfuse
binaries/osx/lion/: cloudfuse
